crates/biome_cli/tests/snapshots/main_commands_check/diagnostic_level_without_fix_respects_level.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": false,
      "complexity": {
        "noUselessUndefinedInitialization": "info"
      },
      "suspicious": {
        "noDoubleEquals": "error"
      }
    }
  }
}
```

## `test.ts`

```ts
let x: number | undefined = undefined;
if (x == 1) {
  console.log(x);
}

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.ts:2:7 lint/suspicious/noDoubleEquals  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Using == may be unsafe if you are relying on type coercion.
  
    1 │ let x: number | undefined = undefined;
  > 2 │ if (x == 1) {
      │       ^^
    3 │   console.log(x);
    4 │ }
  
  i == is only allowed when comparing against null.
  
  i Unsafe fix: Use === instead.
  
    2 │ if·(x·===·1)·{
      │         +     

```

```block
test.ts format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 1 │   let x: number | undefined = undefined;
    2 2 │   if (x == 1) {
    3   │ - ··console.log(x);
      3 │ + → console.log(x);
    4 4 │   }
    5 5 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
