crates/biome_cli/tests/snapshots/main_commands_check/file_too_large_config_limit.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check check.js
```

## `biome.json`

```json
{
  "files": {
    "maxSize": 16
  }
}
```

## `check.js`

```js
statement1();
statement2();
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your biome.json or biome.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - check.js
  


```

# Emitted Messages

```block
check.js check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! The size of the file is 27 B, which exceeds the configured maximum of 16 B for this project.
    Use the `files.maxSize` configuration to change the maximum size of files processed, or `files.includes` to ignore the file.
  

```

```block
Checked 0 files in <TIME>. No fixes applied.
Found 1 warning.
```
